--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="downloads">
           <span>Downloads:</span>
           <ul>
-            <li><a href="https://github.com/Snake/downloads/zip/Snake.zip" class="button">ZIP</a></li>
-            <li><a href="https://github.com/Snake/downloads/apk/Snake.apk" class="button">APK</a></li>
+            <li><a href="downloads/zip/Snake.zip" class="button">ZIP</a></li>
+            <li><a href="downloads/apk/Snake.apk" class="button">APK</a></li>
           </ul>
         </div>
       </div><!-- end banner -->
