changing text in header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
         <h1>Snake</h1>
-        <p>Android simple snake game</p>
+        <p>Snake game for Android by Anton Goi</p>
       </header>
 
       <div id="banner">
