--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ To control snake, swipe your finger across the display in desired direction.<br/
 You can pause and unpause game by double tap.</p></td>
 </tr>
 </table>
+<br/>
+<table style="border:0px;">
+<tr style="border:0px;">
+<td style="border:0px;"><a href="downloads/zip/Snake.zip"><img src="images\zip.png"/></a></td>
+<td style="border:0px;"><a href="downloads/apk/Snake.apk"><img src="images\apk.png"/></a></td>
+</tr>
+</table>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/antongoi">antongoi</a></p>
