--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ You can pause and unpause game by double tap.</p></td>
 <br/>
 <table style="border:0px;">
 <tr style="border:0px;">
-<td style="border:0px;"><a href="downloads/zip/Snake.zip"><img src="images\zip.png"/></a></td>
-<td style="border:0px;"><a href="downloads/apk/Snake.apk"><img src="images\apk.png"/></a></td>
+<td style="border:0px;"><center><a href="downloads/zip/Snake.zip"><img src="images\zip.png"/></a></center></td>
+<td style="border:0px;"><center><a href="downloads/apk/Snake.apk"><img src="images\apk.png"/></a></center></td>
 </tr>
 </table>
       </section>
